--- a/.github/workflows/use-action-sample2.yml
+++ b/.github/workflows/use-action-sample2.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Hello world action step
         id: hello
         uses: yuuki1967/js-action-learning2@v1.0
